--- a/frontend/src/app/libs/common-components/components/icon/icon.component.html
+++ b/frontend/src/app/libs/common-components/components/icon/icon.component.html
@@ -1,6 +1,6 @@
 <mat-icon
 	*ngIf="icon"
 	class="icon icon--{{size}}"
-  [ngStyle]="{ 'color' : color }">
+  [style.color]="color">
 		{{icon}}
 </mat-icon>
