--- a/frontend/src/app/libs/common-components/components/tasks-creator/tasks-list/tasks-list.component.html
+++ b/frontend/src/app/libs/common-components/components/tasks-creator/tasks-list/tasks-list.component.html
@@ -4,9 +4,9 @@
     <app-icon-button
       class="tasks-list__add-btn"
       (click)="addNewTask()"
-      [startIcon]="'add'"
-      [iconColor]="'#367FF6'"
-      [iconSize]="'s'">
+      startIcon="add"
+      iconColor="#367FF6"
+      iconSize="s">
     </app-icon-button>
   </div>
   <div class="tasks-list__content">
