--- a/frontend/src/app/libs/common-components/components/icon-button/icon-button.component.html
+++ b/frontend/src/app/libs/common-components/components/icon-button/icon-button.component.html
@@ -1,4 +1,4 @@
-<app-button class="button_icon" [type]="type" [theme]="theme" [iconButton]="true">
+<app-button class="button_icon" [type]="type" [theme]="theme" iconButton="true">
 
 	<app-icon *ngIf="startIcon" class="icon-button__icon" [icon]="startIcon" [size]="iconSize" [color]="iconColor"></app-icon>
 
