--- a/frontend/src/app/libs/common-components/components/input/input.component.html
+++ b/frontend/src/app/libs/common-components/components/input/input.component.html
@@ -1,7 +1,7 @@
 <mat-form-field
 	appearance="outline"
-	[style.width] = "widthInput"
-  [ngClass]="{ 'no-paddings' : noPaddings }"
+	[style.width]="widthInput"
+  [class.no-paddings]="noPaddings"
 	[class.input--dark]="isDarkTheme">
 
 	<mat-icon matPrefix *ngIf="preIcon" class="input__pre-icon">{{preIcon}}</mat-icon>
