fix: remove scrolls

--- a/frontend/src/app/libs/event-description/components/event-description-panel/event-description-panel.component.html
+++ b/frontend/src/app/libs/event-description/components/event-description-panel/event-description-panel.component.html
@@ -1,4 +1,5 @@
 <div class="app-event-description-panel">
+	<div class="app-event-description-panel__header-wrapper">
  	<div class="app-event-description-panel__breadcrumb">
 		<app-breadcrumb></app-breadcrumb>
 	</div> 
@@ -49,6 +50,7 @@
 				</span>
 			</div>
 		</div>
+	</div>
 	</div>
 	<div class="app-event-description-panel__content-wrapper">
 		<div class="app-event-description-panel__content"
