feat: my events section

--- a/frontend/src/app/libs/landing/components/event-list/event-list.component.html
+++ b/frontend/src/app/libs/landing/components/event-list/event-list.component.html
@@ -1,6 +1,9 @@
 <div class="app-event-list"
 	 *ngIf="events.length">
-	<p class="app-event-list__quantity">
+	<p class="app-event-list__quantity" 
+		[ngClass]="labelColor === labelColorDark 
+								? 'app-event-list__quantity--font-dark' 
+								: 'app-event-list__quantity--font-light'">
 		{{quantityLabel}} events ({{events.length}})
 	</p>
 
