fix: the colors variables don't match with the design layout

--- a/frontend/src/app/libs/common-components/components/breadcrumb/breadcrumb.component.scss
+++ b/frontend/src/app/libs/common-components/components/breadcrumb/breadcrumb.component.scss
@@ -21,7 +21,7 @@
 		margin-left: $layout-outer-margin;
 	}
 	&__link:last-child {
-		color: $color-black-100;
+		color: $color-black;
 	}
 	&__img {
 		vertical-align: middle;
