--- a/frontend/src/app/libs/common-components/components/event-card/event-card.component.scss
+++ b/frontend/src/app/libs/common-components/components/event-card/event-card.component.scss
@@ -105,7 +105,7 @@ $container-padding-left-right: 40px;
       }
 
       &--draft {
-        color: $color-black-100;
+        color: $color-black;
 
         background: $color-white-100;
         border: 1px solid $color-black-30;
