--- a/frontend/src/app/libs/common-components/components/tag-list/tag-list.theme.scss
+++ b/frontend/src/app/libs/common-components/components/tag-list/tag-list.theme.scss
@@ -21,7 +21,7 @@
 
 	&--dark-theme {
 		.mat-chip.mat-standard-chip {
-			color: $color-black-100;
+			color: $color-black;
 			background-color: $color-white-100;
 		}
 	}
