--- a/frontend/src/app/libs/common-components/shared/md-palette.scss
+++ b/frontend/src/app/libs/common-components/shared/md-palette.scss
@@ -12,7 +12,7 @@ $mat-light-theme-background: (
   selected-button: map_get($mat-grey, 300),
   selected-disabled-button: map_get($mat-grey, 400),
   disabled-button-toggle: map_get($mat-grey, 200),
-  unselected-chip: $color-black-10,
+  unselected-chip: $color-black-5,
   disabled-list-option: map_get($mat-grey, 200),
   tooltip: map_get($mat-grey, 700),
 );
@@ -20,7 +20,7 @@ $mat-light-theme-background: (
 // Foreground palette for light themes.
 $mat-light-theme-foreground: (
   base:              black,
-  divider:           $color-black-10,
+  divider:           $color-black-5,
   dividers:          $dark-dividers,
   disabled:          $dark-disabled-text,
   disabled-button:   rgba(black, .26),
@@ -30,7 +30,7 @@ $mat-light-theme-foreground: (
   secondary-text:    $dark-secondary-text,
   icon:              rgba(black, .54),
   icons:             rgba(black, .54),
-  text:              $color-black-100,
+  text:              $color-black,
   slider-min:        rgba(black, .87),
   slider-off:        rgba(black, .26),
   slider-off-active: rgba(black, .38),
