--- a/frontend/src/app/libs/landing/components/events-page/components/belonged-to-user-events/belonged-to-user-events.component.scss
+++ b/frontend/src/app/libs/landing/components/events-page/components/belonged-to-user-events/belonged-to-user-events.component.scss
@@ -1,5 +1,5 @@
 @import "variables";
 
 .app-belonged-to-user-events--bg {
-  background-color: $color-white;
+  background-color: $color-black-3;
 }
