refactor: ngif should be on separated line

--- a/frontend/src/app/libs/landing/components/events-page/components/belonged-to-user-events/belonged-to-user-events.component.html
+++ b/frontend/src/app/libs/landing/components/events-page/components/belonged-to-user-events/belonged-to-user-events.component.html
@@ -1,5 +1,6 @@
 <div class="app-belonged-to-user-events--bg ">
-  <app-event-list *ngIf="events?.length"
+  <app-event-list 
+    *ngIf="events?.length"
     [events]="events"
     [labelColor]="labelColor"
     [quantityLabel]="myEvents">
