--- a/frontend/src/app/libs/landing/components/events-page/events-page.component.html
+++ b/frontend/src/app/libs/landing/components/events-page/events-page.component.html
@@ -17,7 +17,8 @@
 	</ng-container>
 	<ng-container *ngIf="events.status === successStatus">
 		
-		<app-belonged-to-user-events *ngIf="user?.value"
+		<app-belonged-to-user-events 
+			*ngIf="user?.value"
 			[events]="userEvents$ | async">
 		</app-belonged-to-user-events>
 
