Feature/my events section (#123)
* feat: my events section

* fix: the colors variables don't match with the design layout

--- a/frontend/src/app/libs/landing/components/events-page/events-page.component.html
+++ b/frontend/src/app/libs/landing/components/events-page/events-page.component.html
@@ -16,6 +16,12 @@
 		</div>
 	</ng-container>
 	<ng-container *ngIf="events.status === successStatus">
+		
+		<app-belonged-to-user-events 
+			*ngIf="user?.value"
+			[events]="userEvents$ | async">
+		</app-belonged-to-user-events>
+
 		<app-user-events-list *ngIf="user?.value"
 							  [user]="user.value"
 							  [events]="events.value">
