--- a/frontend/src/app/libs/event-description/components/event-participation-control/event-participation-control.component.html
+++ b/frontend/src/app/libs/event-description/components/event-participation-control/event-participation-control.component.html
@@ -37,7 +37,7 @@
     *ngSwitchCase="openEvent"
     class="app-event-participation-control__container"
   >
-    <app-button type="flat" color="accept">
+    <app-button type="flat" color="accept" (click)="onOpenEvent()">
       OPEN EVENT
     </app-button>
   </div>
