--- a/frontend/src/app/libs/event-info/tasks-viewer/tasks-viewer.component.html
+++ b/frontend/src/app/libs/event-info/tasks-viewer/tasks-viewer.component.html
@@ -1,6 +1,6 @@
 <div class="app-tasks-viewer">
   <aside class="app-tasks-viewer__aside">
-    <app-task-list [tasks]="tasks" (selected)="onTaskSelected($event)"></app-task-list>
+    <app-task-list [tasks]="tasks" (selected)="taskSelected($event)"></app-task-list>
   </aside>
 
   <main class="app-tasks-viewer__main">
