fix: user dropdown

--- a/frontend/src/app/libs/container/components/header/components/avatar/avatar.component.scss
+++ b/frontend/src/app/libs/container/components/header/components/avatar/avatar.component.scss
@@ -33,7 +33,7 @@
 
 		color: $color-white;
 
-		border-bottom: 1px solid $color-white;
+		border-bottom: 1px solid $color-white-10;
 		cursor: default;
 	}
 
