feat: redirect to landing

--- a/frontend/src/app/libs/auth-pages/sign-in/sign-in.component.html
+++ b/frontend/src/app/libs/auth-pages/sign-in/sign-in.component.html
@@ -12,7 +12,7 @@
 			<span class="sign-in-page__link-sign-up sign-in-page__link-sign-up--white">
 				{{ "SIGN_IN.NO_ACCOUNT" | translate }}
 			</span>
-			<a (click)="onSinUp()"
+			<a (click)="onSingUp()"
 				class="sign-in-page__link-sign-up sign-in-page__link-sign-up--blue">
 				{{ "SIGN_IN.SIGN_UP_BTN" | translate }}
 			</a>
