feat: Add our custom scrollbar styles to global scrollbar at landing page

--- a/frontend/src/app/libs/common-components/shared/scrollbar.scss
+++ b/frontend/src/app/libs/common-components/shared/scrollbar.scss
@@ -31,6 +31,7 @@
     }
     &::-webkit-scrollbar-thumb {
       border-radius: $secondary-grid-unit / 2;
+      background: $color-black-50;
     }
 
     &--light-theme::-webkit-scrollbar-thumb {
