feat: add our custom scrollbar styles to global scrollbar at landing page

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -2,15 +2,18 @@
 
 :host {
 	box-sizing: border-box;
-
-	color: #333333;
-
-	-webkit-font-smoothing: antialiased;
+  color: #333333;
+  -webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
 
 .content {
 	text-align: center;
-
-	background-color: $color-black-30;
+  background-color: $color-black-30;
 }
+
+.app-wrapper{
+  height: 100vh;
+  overflow-y: auto;
+}
+
