--- a/frontend/src/app/libs/common-components/shared/scrollbar.scss
+++ b/frontend/src/app/libs/common-components/shared/scrollbar.scss
@@ -1,5 +1,8 @@
 @import "variables";
 
+body{
+  overflow-y: hidden;
+}
 @supports (scrollbar-width: thin) {
   .scrollbar {
 		overflow: auto;
@@ -31,7 +34,7 @@
     }
     &::-webkit-scrollbar-thumb {
       border-radius: $secondary-grid-unit / 2;
-      background: $color-black-50;
+
     }
 
     &--light-theme::-webkit-scrollbar-thumb {
