--- a/frontend/src/app/libs/landing/components/events-page/events-page.component.html
+++ b/frontend/src/app/libs/landing/components/events-page/events-page.component.html
@@ -16,15 +16,15 @@
 		</div>
 	</ng-container>
 	<ng-container *ngIf="events.status === successStatus">
-		
-		<app-belonged-to-user-events 
+
+		<app-belonged-to-user-events
 			*ngIf="user?.value"
 			[events]="userEvents$ | async">
 		</app-belonged-to-user-events>
 
 		<app-user-events-list *ngIf="user?.value"
 							  [user]="user.value"
-							  [events]="events.value">
+							  [events]="otherEvents">
 		</app-user-events-list>
 
 		<app-public-events-list *ngIf="!user?.value && user.status !== pendingStatus"
