--- a/frontend/src/app/libs/container/container.component.html
+++ b/frontend/src/app/libs/container/container.component.html
@@ -1,5 +1,5 @@
 <app-header *ngIf="!(hideHeader$ | async)"></app-header>
-<div class="container">
+<div class="container" appScrollbar>
 	<router-outlet></router-outlet>
 </div>
 <app-footer *ngIf="!(hideFooter$ | async)"></app-footer>
