--- a/frontend/src/app/libs/container/container.component.scss
+++ b/frontend/src/app/libs/container/container.component.scss
@@ -1,8 +1,8 @@
 @import "variables";
 
 .container{
-	min-height: calc(100vh - 120px);
+	height: calc(100vh - 120px);
 	width: auto;
-
+  overflow-y: auto;
 	background-color: $color-black-95;
 }
