feat: ckeditor readonly and placeholder inputs

--- a/frontend/src/app/libs/common-components/components/ckeditor/ckeditor.component.html
+++ b/frontend/src/app/libs/common-components/components/ckeditor/ckeditor.component.html
@@ -1,3 +1,4 @@
 <ckeditor [config]="config"
 		  (change)="getDataCkeditor($event)"
-		  [formControl]="formControl"></ckeditor>
+		  [formControl]="formControl"
+		  [readOnly]="readonly"></ckeditor>
