--- a/frontend/src/app/libs/event-info/task/task.component.html
+++ b/frontend/src/app/libs/event-info/task/task.component.html
@@ -15,9 +15,9 @@
         <app-button
             class="app-task__form-submit"
             type="flat"
-            [color]="task.solution.status == 'DRAFT' ? 'primary' : 'accept'"
+            [color]="solution.status == 'DRAFT' ? 'primary' : 'accept'"
             (click)="submitSolution()">
-            <ng-container [ngSwitch]="task.solution.status">
+            <ng-container [ngSwitch]="solution.status">
                 <ng-container *ngSwitchCase="'PENDING'">
                     {{ "BUTTON.SENDED" | translate }}
                 </ng-container>
@@ -34,8 +34,8 @@
         class="app-task__form-answer app-task__form-answer--text"
         formControlName="answer"
         placeHolder="{{ 'PLACEHOLDER.EVENT_TEXT_SOLUTION' | translate }}"
-        [value]="task.solution.status !== 'PENDING'"
-        [readonly]="task.solution.status === 'PENDING'"
+        [value]="solution.status !== 'PENDING'"
+        [readonly]="solution.status === 'PENDING'"
     ></app-ckeditor>
 </ng-template>
 
