Feat/text answer task support at tasks viewer UI (#141)
* task component: only visual, logic not completed

* move reusable parts to common-components module

* feat: adding lang files for button and placeholer

* feat: ckeditor readonly and placeholder inputs

* feat: store, interface and moc-service preparation for solutions

* feat: task component text-answer logic added

* fix: pre-push corrections

* fix: pre-push corrections

* fix: taskComponent test-ci fixes

* fix: pre-push test fixes

* fix: task.component -> rewrite hardcode to getters and enums

--- a/frontend/src/app/libs/event-info/task/task.component.html
+++ b/frontend/src/app/libs/event-info/task/task.component.html
@@ -1,1 +1,49 @@
-<h3 *ngIf="task">{{ task.taskName }}</h3>
+<section class="app-task">
+    <h3 class="app-task__header" *ngIf="task">{{ task.taskName }}</h3>
+    <div class="app-task__question" [innerHTML]="task.question | safeHtml"></div>
+    <form
+        class="app-task__form"
+        action=""
+        [formGroup]="taskFormGroup">
+        <ng-container [ngSwitch]="task.taskType">
+            <ng-template *ngSwitchCase="taskTypes.Text" [ngTemplateOutlet]="textAnswer"></ng-template>
+            <ng-template *ngSwitchCase="taskTypes.Coding" [ngTemplateOutlet]="codeAnswer"></ng-template>
+            <ng-template *ngSwitchCase="taskTypes.Single" [ngTemplateOutlet]="singleAnswer"></ng-template>
+            <ng-template *ngSwitchCase="taskTypes.Multiple" [ngTemplateOutlet]="multipleAnswer"></ng-template>
+            <ng-template *ngSwitchDefault [ngTemplateOutlet]="textAnswer"></ng-template>
+        </ng-container>
+        <app-button
+            class="app-task__form-submit"
+            type="flat"
+            [color]="solution.status == 'DRAFT' ? 'primary' : 'accept'"
+            (click)="submitSolution()">
+            <ng-container [ngSwitch]="solution.status">
+                <ng-container *ngSwitchCase="solutionStatus.Pending">
+                    {{ "BUTTON.SENDED" | translate }}
+                </ng-container>
+                <ng-container *ngSwitchDefault>
+                    {{ "BUTTON.SEND" | translate }}
+                </ng-container>
+            </ng-container>
+        </app-button>
+    </form>
+</section>
+
+<ng-template #textAnswer [formGroup]="taskFormGroup">
+    <app-ckeditor
+        class="app-task__form-answer app-task__form-answer--text"
+        formControlName="answer"
+        placeHolder="{{ 'PLACEHOLDER.EVENT_TEXT_SOLUTION' | translate }}"
+        [value]="isTaskPending"
+        [readonly]="isTaskPending"
+    ></app-ckeditor>
+</ng-template>
+
+<ng-template #singleAnswer [formGroup]="taskFormGroup">
+</ng-template>
+
+<ng-template #codeAnswer [formGroup]="taskFormGroup">
+</ng-template>
+
+<ng-template #multipleAnswer [formGroup]="taskFormGroup">
+</ng-template>
